pushing up files

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
 
         <ul>
-          <li><a href="http://kdeblasi.github.io/midterm">Home</a></li>
-          <li><a href="http://kdeblasi.github.io/midterm-about">About</a></li>
-          <li><a href="http://kdeblasi.github.io/midterm-contact">Contact</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
 
    <img src="https://scontent-iad3-1.xx.fbcdn.net/hphotos-xfl1/v/t1.0-9/12799460_10204634705861782_1783351354478096156_n.jpg?oh=a52874e8e881f040ac60f78f2b01b8dc&oe=574BF134" alt"" width="50px" /></a></div>
